--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,9 @@
   --foreground: #f3f3f3;
 }
 
-
+*{
+  box-sizing: border-box;
+}
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -24,4 +26,29 @@ body {
 
 .g-px {
   @apply px-20 max-md:px-16 max-sm:px-4;
+}
+
+.blog-content {
+  position: relative;
+  transition: max-height 0.5s ease-out;
+  max-width: 80vw;
+
+}
+
+.blog-content.collapsed {
+  max-height: 820px;
+  overflow: hidden;
+}
+
+
+.blog-content.collapsed::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  background: linear-gradient(to bottom, rgba(23, 23, 23, 0), #171717 90%);
+  pointer-events: none;
+  z-index: 1;
 }
