--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,8 @@ body {
 }
 
 .g-px {
-  @apply max-xl:px-20 max-lg:px-16  max-sm:px-4 max-md:px-8 px-24;
+  @apply container mx-auto max-sm:px-2;
+  /* @apply max-xl:px-20 max-lg:px-16  max-sm:px-4 max-md:px-8 px-24; */
 }
 
 .blog-content {
