--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ body {
 }
 
 .g-px {
-  @apply container mx-auto max-sm:px-2 md:px-12 max-lg:px-0;
+  @apply container mx-auto max-sm:px-2 max-md:px-4 lg:px-4;
   /* @apply max-xl:px-20 max-lg:px-16  max-sm:px-4 max-md:px-8 px-24; */
 }
 
